--- a/.env
+++ b/.env
@@ -1,10 +1,12 @@
 PORT=3000
-ADMIN_USER=john
-ADMIN_PASS=latif
+ADMIN_USER=store
+ADMIN_PASS=king
 
 SMTP_SERVICE=gmail
-SMTP_USER=clantrip980@gmail.com
-SMTP_PASS=nxop ifwb wavd fwnf
+SMTP_USER=clanking957@gmail.com
+SMTP_PASS=ooag vozw olmr xwdt
 
-EMAIL_USER=clantrip980@gmail.com
-EMAIL_PASS=nxop ifwb wavd fwnf
+EMAIL_USER=clanking957@gmail.com
+EMAIL_PASS=ooag vozw olmr xwdt
+
+SESSION_SECRET=b98He518ChSkzuQTrP8THvquw691o4H2nNgmKYN/WtE=
